--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "admin-lte": "^3.1.0",
-    "bootstrap": "^5.0.0-beta3",
-    "datatables.net-dt": "^1.10.24",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "es6-promise": "^4.2.8",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "isomorphic-fetch": "^3.0.0",
-    "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "path": "^0.12.7",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
+    "react-data-table-component": "^6.11.7",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.1.0",
     "react-popper": "^2.2.5",
